test/subjects/errors/bad_arrays_read3.php
<?php
	$x[0][]; // { phc-error: Cannot use [] for reading }
?>
